# safevalue

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs
tests/: compilation.rs
tests/compile-fail/: no_reads_for_read_once.rs  no_writes_for_write_once.rs  writes_require_unsafe.rs
