[package]
name = "safevalue"
version = "0.1.0"
edition = "2024"
authors = ["Marcel Lambert <marcel_lambert@ymail.com>"]
keywords = ["unsafe", "safe", "utility", "no_std", "derive"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fice/safevalue"
readme = "README.md"
documentation = "https://docs.rs/safevalue"
homepage = "https://crates.io/crates/safevalue"
description = "A value based approach to uphold SAFETY requirements for unsafe Rust code."
exclude = [".github"]

[dependencies]
#no dependencies

[dev-dependencies]
compiletest_rs = "0.11.0"